# docr

./: .gitignore  Cargo.toml  LICENSE  README.md  appveyor.yml  tasks.py
.github/workflows/: main.yml
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs
docrapi/: Cargo.toml
docrapi/src/: lib.rs
docrapp/: Cargo.toml
docrapp/src/: main.rs
docrlib/: Cargo.toml
docrlib/src/: lib.rs
docrpy/: Cargo.toml
docrpy/src/: lib.rs
