[package]
name = "docrapi"
version = "0.3.0"
authors = ["mush42 <musharraf.omer@gmail.com>"]
edition = "2024"

[dependencies]
image = "0.24.9"

[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "Globalization",
    "Security_Cryptography",
    "Media_Ocr", 
    "Graphics_Imaging", 
    "Storage_Streams", 
    "Foundation",
    "Foundation_Collections",
]
